src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
    .my-link-style:active {
        background-color: black;
        color: white;
    }
    .my-link-inverted:active {
        background-color: white;
        color: black;
    }
    @media (min-width: 640px) {
        .my-link-style:hover {
            background-color: black;
            color: white;
        }
        .my-link-inverted:hover {
            background-color: white;
            color: black;
        }
    }

    .my-description-style {
        display: flex;
        flex-direction: column;
        gap: 0.75rem;
        list-style: circle;
    }
    .my-description-style * {
        list-style: square;
        list-style-position: inside;
        line-height: 1.75em;
    }
    .my-description-style a {
        font-weight: 600;
    }
    .my-description-style a:hover, .my-description-style a:active {
        background-color: black;
        color: white;
    }

    .fixed-blur {
        -webkit-backdrop-filter: blur(20px) contrast(70%) brightness(1.2);
        backdrop-filter: blur(20px) contrast(70%) brightness(1.2);
        position: fixed;
    }

    .my-invert-filter {
        mix-blend-mode: difference;

        /* filter-invert works only of bg is lighter than the foreground */
        filter: invert(100%);
    }
}

